# state-machine

./: CMakeLists.txt  CentrifugeTest.c  Motor.c  Motor.h  example1  main2.c
VS2017/: VS2017.sln
VS2017/VS2017/: VS2017.vcxproj  VS2017.vcxproj.filters
cmake/: arm-none-eabi-gcc.cmake  custom_configuration.cmake
fsm_lib/: CMakeLists.txt
fsm_lib/include/: DataTypes.h  Fault.h  LockGuard.h  StateMachine.h  fb_allocator.h  sm_allocator.h  x_allocator.h
fsm_lib/src/: Fault.c  StateMachine.c  fb_allocator.c
knee_fsm/: CMakeLists.txt
knee_fsm/include/: DataTypes.h  Knee_Fsm.h  StateMachine.h  stateMachineParameters.h
knee_fsm/include/utils/: filters.h  utilities.h
knee_fsm/src/: Knee_Fsm.c  StateMachine.c  filters.c  utilities.c
